<resources>
    <string name="app_name">ASSRA</string>
    <string name="assra">ASSRA</string>
    <string name="click_for_patient">Patient</string>
    <string name="click_for_driver">Driver</string>
    <string name="first_aid_instructions">First Aid Instructions</string>
    <string name="call_ambulance">Call Ambulance</string>
    <string name="cancel">cancel request</string>
    <string name="seconds">seconds</string>
    <string name="_10">10</string>
    <string name="first_aid_video">First Aid Video</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="sign_up">sign up</string>

    <string name="signing_up">Signing up !</string>

    <string name="logging_in">Logging in !</string>

    <string name="please_wait">please wait</string>
    <string name="signup_error">Signup Error</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="click_for_admin">Admin</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account_signup">Dont have an account ? Signup !</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_cinic">Enter your cinic</string>
    <string name="enter_you_drivers_license_number">Enter you drivers license number</string>
    <string name="driver_login">Driver Login</string>
    <string name="patient_login">Patient Login</string>
    <string name="patient_signup">Patient Signup</string>
    <string name="admin_login">Admin Login</string>
    <string name="admin_signup">Admin Signup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logut">Logout</string>
    <string name="logout_sure">Are you sure you want to log out ?</string>
    <string name="logout_content">Are you sure you want to logout ?</string>
    <string name="an_error_occured_please_try_again_later">An error occured please try again later</string>
    <string name="loading">Loading</string>
    <string name="fetching_directions">Fetching Directions and Distance Information</string>
    <string name="error_fetch_googleapi">Error fetching directions from Google API</string>
    <string name="error_from_server">Error from server occured</string>
    <string name="register_hospital">Register Hospital</string>
    <string name="enter_hospital_name">Enter Hospital Name</string>
    <string name="enter_hospital_email">Enter Hospital Email</string>
    <string name="enter_number_of_beds">Enter Number of Beds</string>
    <string name="set_hospital_location">Set Hospital Location</string>
    <string name="address_is_empty_set_hospital_location">Address is empty set hospital location.</string>
    <string name="address">Address</string>
    <string name="enter_hospital_password">Enter Hospital Password</string>
    <string name="registration_error">Registration Error</string>
    <string name="hosp_reg_error_reason">Could not register hospital due to server error</string>
    <string name="hospital_login">Hospital Login</string>
    <string name="click_for_hospital">Hospital</string>
    <string name="login_error">Login Error</string>
    <string name="view_driver_info">View Driver Info</string>
    <string name="driver_info">Driver Info</string>
    <string name="driver_name">Driver Name :</string>
    <string name="user_name">User Name :</string>
    <string name="cnic">CNIC :</string>
    <string name="license_number">License Number :</string>
    <string name="contact_number">Contact Number :</string>
    <string name="latitude_longitude">Latitude/Longitude :</string>


</resources>
