<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_black_1000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/driver_name"/>


    <TextView
        android:id="@+id/driverNameTextView"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_black_1000"
        android:textSize="16sp"
        android:text="John"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_black_1000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/user_name"/>


    <TextView
        android:id="@+id/userNameTextView"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_black_1000"
        android:textSize="16sp"
        android:text="Johny"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_black_1000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/cnic"/>


    <TextView
        android:id="@+id/cnicTextView"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_black_1000"
        android:textSize="16sp"
        android:text="John"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_black_1000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/license_number"/>


    <TextView
        android:id="@+id/licenseNumberTextView"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_black_1000"
        android:textSize="16sp"
        android:text="John"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_black_1000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/contact_number"/>


    <TextView
        android:id="@+id/contactNumberTextView"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_black_1000"
        android:textSize="16sp"
        android:text="John"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_black_1000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/latitude_longitude"/>


    <TextView

        android:id="@+id/gpsCoordTextView"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_black_1000"
        android:textSize="16sp"
        android:text="John"/>


</LinearLayout>