<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.Activities.MainActivity"
    android:orientation="vertical"
    android:scrollbars="vertical"
   >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <include layout="@layout/hero"/>

            <LinearLayout
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/patientStartButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/click_for_patient"
                    app:backgroundTint="@color/primary"
                    android:textColor="@color/md_white_1000"
                    android:layout_gravity="center_horizontal"
                    />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/driverStartButton"
                android:layout_marginTop="8dp"
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:text="@string/click_for_driver"
                app:backgroundTint="@color/colorPrimary"
                android:textColor="@color/md_white_1000"/>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/adminStartButton"
                android:layout_marginTop="8dp"
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:text="@string/click_for_admin"
                app:backgroundTint="@color/colorPrimary"
                android:textColor="@color/md_white_1000"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/hospitalStartButton"
                android:layout_marginTop="8dp"
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:text="@string/click_for_hospital"
                app:backgroundTint="@color/colorPrimary"
                android:textColor="@color/md_white_1000"/>

        </LinearLayout>

    </LinearLayout>




</ScrollView>