<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Admin.Fragments.AdminRegisterHospitalFragment">




    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/register_hospital"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/md_black_1000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />






            <android.support.design.widget.TextInputLayout
                android:id="@+id/hospitalNameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:hint="@string/enter_hospital_name"
                android:textColorHint="@color/primary_dark"
                app:errorEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/hospitalNameInputEditTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/md_black_1000"
                    android:textColorHint="@color/md_black_1000"
                    android:inputType="textPersonName"
                    app:backgroundTint="@color/colorPrimaryDark"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/hospitalEmailTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:hint="@string/enter_hospital_email"
                android:textColorHint="@color/primary_dark"
                app:errorEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/hospitalEmailInputEditTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/md_black_1000"
                    android:textColorHint="@color/md_black_1000"
                    android:inputType="textPersonName"
                    app:backgroundTint="@color/colorPrimaryDark"/>

            </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/hospitalPasswordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:hint="@string/enter_hospital_password"
            android:textColorHint="@color/primary_dark"
            app:errorEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/hospitalPasswordInputEditTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/md_black_1000"
                android:textColorHint="@color/md_black_1000"
                android:inputType="textPassword"
                app:backgroundTint="@color/colorPrimaryDark"/>

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/hospitalBedsCountTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:hint="@string/enter_number_of_beds"
            android:textColorHint="@color/primary_dark"
            app:errorEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/hospitalBedsCountInputEditTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/md_black_1000"
                android:textColorHint="@color/md_black_1000"
                android:inputType="numberDecimal"
                app:backgroundTint="@color/colorPrimaryDark"/>

        </android.support.design.widget.TextInputLayout>



        <TextView
            android:paddingStart="5dp"
            android:text="@string/address"
            android:textColor="@color/primary_dark"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"/>
        <TextView
            android:id="@+id/hospitalLocationTextView"
            android:textSize="18sp"
            android:textColor="@color/primary_dark"
            android:text="@string/address_is_empty_set_hospital_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:paddingStart="4dp"/>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/setHosiptalLocationButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textStyle="bold"
            app:backgroundTint="@color/colorPrimary"
            android:textColor="@color/md_white_1000"
            android:text="@string/set_hospital_location"/>



        <android.support.v7.widget.AppCompatButton
            android:id="@+id/registerHospitalButton"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textStyle="bold"
            app:backgroundTint="@color/colorPrimary"
            android:textColor="@color/md_white_1000"
            android:text="@string/register_hospital"/>

    </LinearLayout>












</ScrollView>